issues with mobile again...gap between land and sky

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,6 +5,7 @@ html, body{
   justify-content: center;
   max-width: 100%;
   overflow-x: hidden;
+  background: black;
 }
 
 .mydimension{
@@ -1703,7 +1704,6 @@ html, body{
   width: 100vw;
   height: 500px;
   bottom: -500px;
-  left: 10vw;
   background: black;
 }
 
